2007-12-07 Issue a warning when drawing an image on a non-linear axis. - MGD

2007-12-06 let widgets.Cursor initialize to the lower x and y bounds
           rather than 0,0, which can cause havoc for dates and other
           transforms - DSD

2007-12-06 updated references to mpl data directories for py2exe - DSD

2007-12-06 fixed a bug in rcsetup, see bug 1845057 - DSD

2007-12-05 Fix how fonts are cached to avoid loading the same one multiple times.
           (This was a regression since 0.90 caused by the refactoring of
           font_manager.py) - MGD

===============================================================
2007-11-27 Released 0.91.1 at revision 4517

===============================================================
2007-11-27 Released 0.91.0 at revision 4478

2007-11-13 All backends now support writing to a file-like object, not
	   just a regular file.  savefig() can be passed a file-like
	   object in place of a file path. - MGD

2007-11-13 Improved the default backend selection at build time:
           SVG -> Agg -> TkAgg -> WXAgg -> GTK -> GTKAgg. The last usable
           backend in this progression will be chosen in the default
           config file. If a backend is defined in setup.cfg, that will
           be the default backend - DSD

2007-11-13 Improved creation of default config files at build time for
           traited config package - DSD

2007-11-12 Exposed all the build options in setup.cfg. These options are
           read into a dict called "options" by setupext.py. Also, added
           "-mpl" tags to the version strings for packages provided by
           matplotlib. Versions provided by mpl will be identified and
           updated on subsequent installs - DSD

2007-11-12 Added support for STIX fonts.  A new rcParam,
	   mathtext.fontset, can be used to choose between:

	   'cm':
	     The TeX/LaTeX Computer Modern fonts

	   'stix':
	     The STIX fonts (see stixfonts.org)

	   'stixsans':