@@ -34,6 +34,7 @@ if cairo.version_info < _version_required:
 backend_version = cairo.version
 del _version_required
 
+from matplotlib import agg
 from matplotlib.backend_bases import RendererBase, GraphicsContextBase,\
      FigureManagerBase, FigureCanvasBase
 from matplotlib.cbook        import enumerate, izip, is_string_like
@@ -117,6 +118,7 @@ class RendererCairo(RendererBase):
         ctx.stroke()
 
 
+<<<<<<< .working
     #@staticmethod
     def convert_path(ctx, tpath):
         for points, code in tpath.iter_segments():
@@ -133,12 +135,48 @@ class RendererCairo(RendererBase):
             elif code == Path.CLOSEPOLY:
                 ctx.close_path()
     convert_path = staticmethod(convert_path)
+=======
+    def draw_path(self, gc, rgbFace, path):
+        ctx = gc.ctx
+        ctx.new_path()
+>>>>>>> .merge-right.r4686
 
+<<<<<<< .working
 
     def draw_path(self, gc, path, transform, rgbFace=None):
         if len(path.vertices) > 18980:
            raise ValueError("The Cairo backend can not draw paths longer than 18980 points.")
 
+=======
+        while 1:
+            code, xp, yp = path.vertex()
+            yp = self.height - yp
+
+            if code == agg.path_cmd_stop:
+                ctx.close_path()
+                break
+            elif code == agg.path_cmd_move_to:
+                ctx.move_to(xp, yp)
+            elif code == agg.path_cmd_line_to:
+                ctx.line_to(xp, yp)
+            elif code == agg.path_cmd_curve3:
+                _, xp1, yp1 = path.vertex()
+                yp1 = self.height - yp1
+                ctx.curve_to(xp, yp, xp, yp, xp1, yp1)
+            elif code == agg.path_cmd_curve4:
+                _, xp1, yp1 = path.vertex()
+                yp1 = self.height - yp1
+                _, xp2, yp2 = path.vertex()
+                yp2 = self.height - yp2
+                ctx.curve_to(xp, yp, xp1, yp1, xp2, yp2)
+            elif code == agg.path_cmd_end_poly:
+                ctx.close_path()
+        self._fill_and_stroke(ctx, rgbFace)
+
+    def draw_arc(self, gc, rgbFace, x, y, width, height, angle1, angle2,
+                 rotation):
+        if _debug: print '%s.%s()' % (self.__class__.__name__, _fn_name())
+>>>>>>> .merge-right.r4686
         ctx = gc.ctx
         transform = transform + \
             Affine2D().scale(1.0, -1.0).translate(0, self.height)
