@@ -1211,7 +1211,97 @@ class RendererPdf(RendererBase):
                 stat_key, (realpath, Set()))
             used_characters[1].update(set)
 
+<<<<<<< .working
     def draw_image(self, x, y, im, bbox, clippath=None, clippath_trans=None):
+=======
+    def draw_arc(self, gcEdge, rgbFace, x, y, width, height,
+                 angle1, angle2, rotation):
+        """
+        Draw an arc using GraphicsContext instance gcEdge, centered at x,y,
+        with width and height and angles from 0.0 to 360.0
+        0 degrees is at 3-o'clock, rotated by `rotation` degrees
+        positive angles are anti-clockwise
+
+        If the color rgbFace is not None, fill the arc with it.
+        """
+        # source: agg_bezier_arc.cpp in agg23
+
+        def arc_to_bezier(cx, cy, rx, ry, angle1, sweep, rotation):
+            halfsweep = sweep / 2.0
+            x0, y0 = cos(halfsweep), sin(halfsweep)
+            tx = (1.0 - x0) * 4.0/3.0;
+            ty = y0 - tx * x0 / y0;
+            px =  x0, x0+tx, x0+tx, x0
+            py = -y0,   -ty,    ty, y0
+            sn, cs = sin(angle1 + halfsweep), cos(angle1 + halfsweep)
+            result = [ (rx * (pxi * cs - pyi * sn),
+                        ry * (pxi * sn + pyi * cs))
+                       for pxi, pyi in zip(px, py) ]
+            result = [ (cx + cos(rotation)*x - sin(rotation)*y,
+                        cy + sin(rotation)*x + cos(rotation)*y)
+                       for x, y in result ]
+            return reduce(lambda x, y: x + y, result)
+
+        epsilon = 0.01
+        angle1 *= pi/180.0
+        angle2 *= pi/180.0
+        rotation *= pi/180.0
+        sweep = angle2 - angle1
+        angle1 = angle1 % (2*pi)
+        sweep = min(max(-2*pi, sweep), 2*pi)
+
+        if sweep < 0.0:
+            sweep, angle1, angle2 = -sweep, angle2, angle1
+        bp = [ pi/2.0 * i
+               for i in range(4)
+               if pi/2.0 * i < sweep-epsilon ]
+        bp.append(sweep)
+        subarcs = [ arc_to_bezier(x, y, width/2.0, height/2.0,
+                                  bp[i], bp[i+1]-bp[i], rotation)
+                    for i in range(len(bp)-1) ]
+
+        self.check_gc(gcEdge, rgbFace)
+        self.file.output(subarcs[0][0], subarcs[0][1], Op.moveto)
+        for arc in subarcs:
+            self.file.output(*(arc[2:] + (Op.curveto,)))
+
+        self.file.output(self.gc.close_and_paint())
+
+    def draw_path(self, gc, rgbFace, path):
+        self.check_gc(gc, rgbFace)
+
+        cmds = []
+
+        while 1:
+            code, xp, yp = path.vertex()
+
+            if code == agg.path_cmd_stop:
+                cmds.append(Op.closepath)
+                break
+            elif code == agg.path_cmd_move_to:
+                cmds.extend([xp, yp, Op.moveto])
+            elif code == agg.path_cmd_line_to:
+                cmds.extend([xp, yp, Op.lineto])
+            elif code == agg.path_cmd_curve3:
+                cmds.extend([xp, yp])
+                cmds.extend([xp, yp])
+                cmds.extend(path.vertex()[1:])
+                cmds.append(Op.curveto)
+            elif code == agg.path_cmd_curve4:
+                cmds.extend([xp, yp])
+                cmds.extend(path.vertex()[1:])
+                cmds.extend(path.vertex()[1:])
+                cmds.append(Op.curveto)
+            elif code == agg.path_cmd_end_poly:
+                cmds.append(Op.closepath)
+        self.file.output(*cmds)
+        self.file.output(self.gc.paint())
+
+    def get_image_magnification(self):
+        return self.image_magnification
+
+    def draw_image(self, x, y, im, bbox):
+>>>>>>> .merge-right.r4686
         #print >>sys.stderr, "draw_image called"
 
         # MGDTODO: Support clippath here
