@@ -820,49 +820,6 @@ class Ellipse(Patch):
     """
     A scale-free ellipse
     """
-<<<<<<< .working
-=======
-    MAGIC = 0.2652031
-    SQRT2 = npy.sqrt(0.5)
-    MAGIC45 = npy.sqrt((MAGIC*MAGIC) / 2.0)
-
-    circle = npy.array(
-        [[0.0, -1.0],
-
-         [MAGIC, -1.0],
-         [SQRT2-MAGIC45, -SQRT2-MAGIC45],
-         [SQRT2, -SQRT2],
-
-         [SQRT2+MAGIC45, -SQRT2+MAGIC45],
-         [1.0, -MAGIC],
-         [1.0, 0.0],
-
-         [1.0, MAGIC],
-         [SQRT2+MAGIC45, SQRT2-MAGIC45],
-         [SQRT2, SQRT2],
-
-         [SQRT2-MAGIC45, SQRT2+MAGIC45],
-         [MAGIC, 1.0],
-         [0.0, 1.0],
-
-         [-MAGIC, 1.0],
-         [-SQRT2+MAGIC45, SQRT2+MAGIC45],
-         [-SQRT2, SQRT2],
-
-         [-SQRT2-MAGIC45, SQRT2-MAGIC45],
-         [-1.0, MAGIC],
-         [-1.0, 0.0],
-
-         [-1.0, -MAGIC],
-         [-SQRT2-MAGIC45, -SQRT2+MAGIC45],
-         [-SQRT2, -SQRT2],
-
-         [-SQRT2+MAGIC45, -SQRT2-MAGIC45],
-         [-MAGIC, -1.0],
-         [0.0, -1.0]],
-        npy.float_)
-
->>>>>>> .merge-right.r4679
     def __str__(self):
         return "Ellipse(%d,%d;%dx%d)"%(self.center[0],self.center[1],self.width,self.height)
 
@@ -898,17 +855,10 @@ class Ellipse(Patch):
     def get_patch_transform(self):
         return self._patch_transform
 
-<<<<<<< .working
     def contains(self,ev):
         if ev.x is None or ev.y is None: return False,{}
         x, y = self.get_transform().inverted().transform_point((ev.x, ev.y))
         return (x*x + y*y) <= 1.0, {}
-=======
-        xcenter = self.convert_xunits(xcenter)
-        width = self.convert_xunits(width)
-        ycenter = self.convert_yunits(ycenter)
-        height = self.convert_xunits(height)
->>>>>>> .merge-right.r4679
 
     def _get_center(self):
         return self._center
@@ -931,105 +881,6 @@ class Ellipse(Patch):
         self._recompute_transform()
     angle = property(_get_angle, _set_angle)
 
-
-<<<<<<< .working
-=======
-        rtheta = angle*npy.pi/180.
-        R = npy.array([
-            [npy.cos(rtheta),  -npy.sin(rtheta)],
-            [npy.sin(rtheta), npy.cos(rtheta)],
-            ])
-
-
-        x, y = npy.dot(R, npy.array([x, y]))
-        x += xcenter
-        y += ycenter
-
-        return zip(x, y)
-
-    def draw(self, renderer):
-        if not self.get_visible(): return
-        #renderer.open_group('patch')
-        gc = renderer.new_gc()
-        gc.set_foreground(self._edgecolor)
-        gc.set_linewidth(self._linewidth)
-        gc.set_alpha(self._alpha)
-        gc.set_antialiased(self._antialiased)
-        self._set_gc_clip(gc)
-
-        gc.set_capstyle('projecting')
-
-        if not self.fill or self._facecolor is None: rgbFace = None
-        else: rgbFace = colors.colorConverter.to_rgb(self._facecolor)
-
-        if self._hatch:
-            gc.set_hatch(self._hatch )
-
-
-        if not hasattr(renderer, 'draw_path'):
-            mpl.verbose.report('patches.Ellipse renderer does not support path drawing; falling back on vertex approximation for nonlinear transformation')
-            renderer.draw_polygon(gc, rgbFace, self.get_verts())
-            return
-
-
-        x, y = self.center
-        x = self.convert_xunits(x)
-        y = self.convert_yunits(y)
-        w = self.convert_xunits(self.width)/2.
-        h = self.convert_yunits(self.height)/2.
-
-        theta = self.angle * npy.pi/180.
-        T = npy.array([
-            [1, 0, x],
-            [0, 1, y],
-            [0, 0, 1]])
-
-
-
-
-        S = npy.array([
-            [w, 0, 0],
-            [0, h, 0],
-            [0, 0, 1]])
-
-
-
-        # rotate by theta
-        R = npy.array([
-            [npy.cos(theta),  -npy.sin(theta), 0],
-            [npy.sin(theta), npy.cos(theta), 0],
-            [0,           0,          1]])
-
-        # transform unit circle into ellipse
-        E = npy.dot(T, npy.dot(R, S))
-
-
-        # Apply the display affine
-        sx, b, c, sy, tx, ty = self.get_transform().as_vec6_val()
-
-        # display coords
-        D = npy.array([
-            [sx, b, tx],
-            [c, sy, ty],
-            [0, 0, 1]], npy.float_)
-
-        M = npy.dot(D,E)
-
-        C = npy.ones((3, len(self.circle)))
-        C[0:2,:] = self.circle.T
-
-        ellipse = npy.dot(M, C).T[:,:2]
-
-        path =  agg.path_storage()
-        path.move_to(*ellipse[0])
-        for i in range(1, 25, 3):
-            path.curve4(*ellipse[i:i+3].flat)
-        path.close_polygon()
-
-        renderer.draw_path(gc, rgbFace, path)
-
-
->>>>>>> .merge-right.r4679
 
 class Circle(Ellipse):
     """
